# Beginner-Rust-Projects

budget_manager/: Cargo.toml  test.db
budget_manager/src/: main.rs
cli_utilites/: Cargo.toml  all.txt  joe.txt
cli_utilites/src/: main.rs  omar.json
error_handling/: Cargo.toml  helloq.txt
error_handling/src/: main.rs
todolist/: Cargo.toml
todolist/src/: main.rs
unit_converter/: Cargo.toml
unit_converter/src/: main.rs
