[package]
name = "error_handling"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
reqwest = { version = "0.12.24" , features = ["json","rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0" , features = ["full"] }
unicode-segmentation = "1.12.0"
